--- a/src/styles/designs/375.css
+++ b/src/styles/designs/375.css
@@ -36,28 +36,28 @@
     border-right: 4px solid black;
 }
 /* coverDown */
-.GameBoard section:nth-child(1) div:nth-child(5), .GameBoard section:nth-child(5) div:nth-child(9), .GameBoard section:nth-child(5) div:nth-child(11), .GameBoard section:nth-child(7) div:nth-child(7), .GameBoard section:nth-child(9) div:nth-child(2), .GameBoard section:nth-child(9) div:nth-child(13), .GameBoard section:nth-child(14) div:nth-child(4), .GameBoard section:nth-child(14) div:nth-child(11), .GameBoard section:nth-child(16) div:nth-child(13), .GameBoard section:nth-child(18) div:nth-child(2), .GameBoard section:nth-child(22) div:nth-child(9){
+.GameBoard section:nth-child(1) div:nth-child(5), .GameBoard section:nth-child(5) div:nth-child(9), .GameBoard section:nth-child(5) div:nth-child(11), .GameBoard section:nth-child(7) div:nth-child(7), .GameBoard section:nth-child(9) div:nth-child(2), .GameBoard section:nth-child(9) div:nth-child(13), .GameBoard section:nth-child(10) div:nth-child(7), .GameBoard section:nth-child(10) div:nth-child(9), .GameBoard section:nth-child(10) div:nth-child(11), .GameBoard section:nth-child(14) div:nth-child(4), .GameBoard section:nth-child(14) div:nth-child(11), .GameBoard section:nth-child(16) div:nth-child(13), .GameBoard section:nth-child(18) div:nth-child(2), .GameBoard section:nth-child(22) div:nth-child(9){
     border-left: var(--border);
     border-right: var(--border);
     border-bottom: var(--border);
     border-radius: var(--coverDown);
 }
 /* coverUp */
-.GameBoard section:nth-child(3) div:nth-child(5), .GameBoard section:nth-child(4) div:nth-child(9), .GameBoard section:nth-child(8) div:nth-child(5), .GameBoard section:nth-child(9) div:nth-child(10), .GameBoard section:nth-child(12) div:nth-child(4), .GameBoard section:nth-child(12) div:nth-child(11), .GameBoard section:nth-child(15) div:nth-child(13), .GameBoard section:nth-child(16) div:nth-child(4), .GameBoard section:nth-child(16) div:nth-child(11), .GameBoard section:nth-child(17) div:nth-child(2), .GameBoard section:nth-child(19) div:nth-child(4), .GameBoard section:nth-child(21) div:nth-child(9), .GameBoard section:nth-child(19) div:nth-child(11){
+.GameBoard section:nth-child(3) div:nth-child(5), .GameBoard section:nth-child(4) div:nth-child(9), .GameBoard section:nth-child(8) div:nth-child(5), .GameBoard section:nth-child(8) div:nth-child(13), .GameBoard section:nth-child(9) div:nth-child(7), .GameBoard section:nth-child(9) div:nth-child(9), .GameBoard section:nth-child(9) div:nth-child(11), .GameBoard section:nth-child(12) div:nth-child(4), .GameBoard section:nth-child(12) div:nth-child(11), .GameBoard section:nth-child(15) div:nth-child(13), .GameBoard section:nth-child(16) div:nth-child(4), .GameBoard section:nth-child(16) div:nth-child(11), .GameBoard section:nth-child(17) div:nth-child(2), .GameBoard section:nth-child(19) div:nth-child(4), .GameBoard section:nth-child(21) div:nth-child(9), .GameBoard section:nth-child(19) div:nth-child(11){
     border-left: var(--border);
     border-right: var(--border);
     border-top: var(--border);
     border-radius: var(--coverUp);
 }
 /* coverRight */
-.GameBoard section:nth-child(2) div:nth-child(3), .GameBoard section:nth-child(2) div:nth-child(13), .GameBoard section:nth-child(4) div:nth-child(2), .GameBoard section:nth-child(4) div:nth-child(12), .GameBoard section:nth-child(6) div:nth-child(3), .GameBoard section:nth-child(7) div:nth-child(10), .GameBoard section:nth-child(8) div:nth-child(3), .GameBoard section:nth-child(10) div:nth-child(11), .GameBoard section:nth-child(11) div:nth-child(2), .GameBoard section:nth-child(13) div:nth-child(2), .GameBoard section:nth-child(15) div:nth-child(9), .GameBoard section:nth-child(17) div:nth-child(5), .GameBoard section:nth-child(17) div:nth-child(8), .GameBoard section:nth-child(19) div:nth-child(9), .GameBoard section:nth-child(20) div:nth-child(1), .GameBoard section:nth-child(20) div:nth-child(12), .GameBoard section:nth-child(22) div:nth-child(4), .GameBoard section:nth-child(22) div:nth-child(13){
+.GameBoard section:nth-child(2) div:nth-child(3), .GameBoard section:nth-child(2) div:nth-child(13), .GameBoard section:nth-child(4) div:nth-child(2), .GameBoard section:nth-child(4) div:nth-child(12), .GameBoard section:nth-child(6) div:nth-child(3), .GameBoard section:nth-child(7) div:nth-child(11), .GameBoard section:nth-child(8) div:nth-child(3), .GameBoard section:nth-child(11) div:nth-child(2), .GameBoard section:nth-child(13) div:nth-child(2), .GameBoard section:nth-child(15) div:nth-child(9), .GameBoard section:nth-child(17) div:nth-child(5), .GameBoard section:nth-child(17) div:nth-child(8), .GameBoard section:nth-child(19) div:nth-child(9), .GameBoard section:nth-child(20) div:nth-child(1), .GameBoard section:nth-child(20) div:nth-child(12), .GameBoard section:nth-child(22) div:nth-child(4), .GameBoard section:nth-child(22) div:nth-child(13){
     border-right: var(--border);
     border-top: var(--border);
     border-bottom: var(--border);
     border-radius: var(--coverRight);
 }
 /* coverLeft */
-.GameBoard section:nth-child(2) div:nth-child(2), .GameBoard section:nth-child(2) div:nth-child(7), .GameBoard section:nth-child(2) div:nth-child(11), .GameBoard section:nth-child(4) div:nth-child(4), .GameBoard section:nth-child(4) div:nth-child(14), .GameBoard section:nth-child(6) div:nth-child(2), .GameBoard section:nth-child(6) div:nth-child(5), .GameBoard section:nth-child(7) div:nth-child(9), .GameBoard section:nth-child(8) div:nth-child(12), .GameBoard section:nth-child(10) div:nth-child(4), .GameBoard section:nth-child(11) div:nth-child(13), .GameBoard section:nth-child(13) div:nth-child(13), .GameBoard section:nth-child(15) div:nth-child(6), .GameBoard section:nth-child(17) div:nth-child(7), .GameBoard section:nth-child(17) div:nth-child(10), .GameBoard section:nth-child(19) div:nth-child(6), .GameBoard section:nth-child(22) div:nth-child(2), .GameBoard section:nth-child(22) div:nth-child(11), .GameBoard section:nth-child(20) div:nth-child(14), .GameBoard section:nth-child(20) div:nth-child(3){
+.GameBoard section:nth-child(2) div:nth-child(2), .GameBoard section:nth-child(2) div:nth-child(7), .GameBoard section:nth-child(2) div:nth-child(11), .GameBoard section:nth-child(4) div:nth-child(4), .GameBoard section:nth-child(4) div:nth-child(14), .GameBoard section:nth-child(6) div:nth-child(2), .GameBoard section:nth-child(6) div:nth-child(5), .GameBoard section:nth-child(7) div:nth-child(9), .GameBoard section:nth-child(10) div:nth-child(4), .GameBoard section:nth-child(11) div:nth-child(13), .GameBoard section:nth-child(13) div:nth-child(13), .GameBoard section:nth-child(15) div:nth-child(6), .GameBoard section:nth-child(17) div:nth-child(7), .GameBoard section:nth-child(17) div:nth-child(10), .GameBoard section:nth-child(19) div:nth-child(6), .GameBoard section:nth-child(22) div:nth-child(2), .GameBoard section:nth-child(22) div:nth-child(11), .GameBoard section:nth-child(20) div:nth-child(14), .GameBoard section:nth-child(20) div:nth-child(3){
     border-left: var(--border);
     border-top: var(--border);
     border-bottom: var(--border);
@@ -69,30 +69,30 @@
     border-right: var(--border);
 }
 /* horizontal */
-.GameBoard section:nth-child(2) div:nth-child(8), .GameBoard section:nth-child(2) div:nth-child(12), .GameBoard section:nth-child(4) div:nth-child(1), .GameBoard section:nth-child(6) div:nth-child(6), .GameBoard section:nth-child(11) div:nth-child(1), .GameBoard section:nth-child(11) div:nth-child(14), .GameBoard section:nth-child(13) div:nth-child(1), .GameBoard section:nth-child(13) div:nth-child(14), .GameBoard section:nth-child(15) div:nth-child(n + 7):nth-child(-n + 8), .GameBoard section:nth-child(19) div:nth-child(n + 7):nth-child(-n + 8), .GameBoard section:nth-child(22) div:nth-child(3), .GameBoard section:nth-child(22) div:nth-child(12){
+.GameBoard section:nth-child(2) div:nth-child(8), .GameBoard section:nth-child(2) div:nth-child(12), .GameBoard section:nth-child(4) div:nth-child(1), .GameBoard section:nth-child(6) div:nth-child(6), .GameBoard section:nth-child(7) div:nth-child(10), .GameBoard section:nth-child(11) div:nth-child(1), .GameBoard section:nth-child(11) div:nth-child(14), .GameBoard section:nth-child(13) div:nth-child(1), .GameBoard section:nth-child(13) div:nth-child(14), .GameBoard section:nth-child(15) div:nth-child(n + 7):nth-child(-n + 8), .GameBoard section:nth-child(19) div:nth-child(n + 7):nth-child(-n + 8), .GameBoard section:nth-child(22) div:nth-child(3), .GameBoard section:nth-child(22) div:nth-child(12){
     border-top: var(--border);
     border-bottom: var(--border);
 }
 /* upLeft */
-.GameBoard section:nth-child(4) div:nth-child(11), .GameBoard section:nth-child(8) div:nth-child(2), .GameBoard section:nth-child(9) div:nth-child(7), .GameBoard section:nth-child(21) div:nth-child(6){
+.GameBoard section:nth-child(4) div:nth-child(11), .GameBoard section:nth-child(8) div:nth-child(2), .GameBoard section:nth-child(21) div:nth-child(6){
     border-top: var(--border);
     border-left: var(--border);
     border-radius: var(--upLeft);
 }
 /* upRight */
-.GameBoard section:nth-child(6) div:nth-child(7), .GameBoard section:nth-child(8) div:nth-child(13), .GameBoard section:nth-child(9) div:nth-child(8), .GameBoard section:nth-child(21) div:nth-child(7){
+.GameBoard section:nth-child(6) div:nth-child(7), .GameBoard section:nth-child(21) div:nth-child(7){
     border-top: var(--border);
     border-right: var(--border);
     border-radius: var(--upRight);
 }
 /* downLeft */
-.GameBoard section:nth-child(10) div:nth-child(7), .GameBoard section:nth-child(10) div:nth-child(10), .GameBoard section:nth-child(17) div:nth-child(4), .GameBoard section:nth-child(20) div:nth-child(11), .GameBoard section:nth-child(22) div:nth-child(6){
+.GameBoard section:nth-child(17) div:nth-child(4), .GameBoard section:nth-child(20) div:nth-child(11), .GameBoard section:nth-child(22) div:nth-child(6){
     border-bottom: var(--border);
     border-left: var(--border);
     border-radius: var(--downLeft);
 }
 /* downRight */
-.GameBoard section:nth-child(2) div:nth-child(9), .GameBoard section:nth-child(4) div:nth-child(5), .GameBoard section:nth-child(10) div:nth-child(5), .GameBoard section:nth-child(10) div:nth-child(8), .GameBoard section:nth-child(17) div:nth-child(11), .GameBoard section:nth-child(20) div:nth-child(4), .GameBoard section:nth-child(22) div:nth-child(7){
+.GameBoard section:nth-child(2) div:nth-child(9), .GameBoard section:nth-child(4) div:nth-child(5), .GameBoard section:nth-child(10) div:nth-child(5), .GameBoard section:nth-child(17) div:nth-child(11), .GameBoard section:nth-child(20) div:nth-child(4), .GameBoard section:nth-child(22) div:nth-child(7){
     border-bottom: var(--border);
     border-right: var(--border);
     border-radius: var(--downRight);
